--- a/index.html
+++ b/index.html
@@ -8,7 +8,36 @@
     <title>Home</title>
 </head>
 <body>
-    
+    <div class="container">
+
+        <header>
+<div class="iconandtitle">
+ <a href="index.html"><img src="images/headericon.svg" alt="icon"></a>
+ <a href="index.html"><p class="headertitle">Travel Day.com</p></a>
+</div>
+
+ <div class="navigation">
+ <nav>
+    <ul class="header_ul">
+        <li><a class="list" href="">Home </a></li>
+        <li><a class="list" href="">Discover </a></li>
+        <li><a class="list" href="">Photo </a></li>
+        <li><a class="list" href="">Contact</a></li>
+    </ul>
+ </nav>
+<img src="images/usericon.svg" alt="">
+</div>
+</header>
+
+<section class="cover">
+    <h1 class="cover_title">TRAVEL NEWS</h1>
+
+    <p class="cover_txt">Lorem ipsum dolor sit amet consectetur. Lectus diam turpis condimentum convallis in. Ac lorem cras laoreet proin suscipit tempor nibh fermentum. Quisque varius sit elit placerat nulla ullamcorper eget. Lobortis semper nec augue sed aliquam. In eget mattis dui arcu mauris blandit. Elementum neque magna vestibulum amet sagittis vel.</p>
+</section>
+
+
+
+    </div>
     
 </body>
 </html>
